--- a/facials.html
+++ b/facials.html
@@ -80,7 +80,7 @@
 
 
     <div class= "first">
-        <p id="section-1" class="title-1">Consulation & Skin Analysis</p>
+        <p="section-1" class="title-1">Consulation & Skin Analysis</p>
             <image class="img-left" src="f-1.jpg" alt="skin analysis image">
                 <div class="des-right">
                     <p>• A comprehensive analysis using advanced skin imaging technology to understand individual skin concerns like dryness, acne, pigmentation, or aging.</p> <br>
