--- a/footspa.html
+++ b/footspa.html
@@ -92,7 +92,7 @@
                     <div class="des-right">
                         <p>•offers an deeply relaxing spa experience that leaves clients feeling truly pampered and rejuvenated.  </p> <br>
 
-                        <p> •AS the wax gradually cools and solidifies it effectively seals in moisture resulting in more hydrated skin.</p><br>
+                        <o> •AS the wax gradually cools and solidifies it effectively seals in moisture resulting in more hydrated skin.</p><br>
                             
                         <p> Time duration: 20 minutes</p><br>
                         
