--- a/massage.html
+++ b/massage.html
@@ -60,7 +60,7 @@
         <p>MASSAGE</p>
     </div>
 
-    <image src="m-0.jpeg" class="i-0" alt="massage main image"></image>
+    <image ="m-0.jpeg" class="i-0" alt="massage main image"></image>
 
     <p class="f-des">Massage is the practice of rubbing and kneading the body using the hands. During a massage, a trained massage therapist will apply gentle  or  strong  pressure  to the muscles and joints of the body to ease pain and tension.</p>
 
